@@ -18,6 +18,8 @@ apt (0.8.16~exp5) experimental; urgency=low
   * apt-pkg/contrib/configuration.cc:
     - fix double delete (LP: #848907)
     - ignore only the invalid regexp instead of all options
+  * apt-pkg/acquire-item.h, apt-pkg/deb/debmetaindex.cc:
+    - fix fetching language information by adding OptionalSubIndexTarget
 
  -- Michael Vogt <mvo@debian.org>  Fri, 05 Aug 2011 10:57:08 +0200
 
